avanzamento login with proxy fixed layout

--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -9,3 +9,13 @@ appTitle=Title of com.myorg.myUI5App
 appDescription=Description of com.myorg.myUI5App
 #XTIT: Main view title
 title=Title of com.myorg.myUI5App
+
+useDarkMode=Use Dark Mode
+
+# Login Page
+login.title=Login
+login.username=Username
+login.password=Password
+login.placeholder.username=Inserisci la tua email
+login.placeholder.password=Inserisci la tua password
+login.btn.login=Login
