--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -26,7 +26,8 @@ articoli= Articoli
 storico= Storico
 documenti= Documenti
 reportistica= Reportistica
-ricercaArt= Ricerca Articolo e disponibilità
+ricercaArtHeader= Ricerca Articolo e disponibilità in Articolo
+ricercaArtSubHeader= Ricerca per codice, descrizione, categoria, serie e articolo
 
 #Search Products
 titleRicercaArt= Ricerca articolo e disponibilità
