Integrazione chiamate OData, cambio layout pages, errorhandler e routing

--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -12,6 +12,9 @@ title=Title of com.myorg.myUI5App
 
 useDarkMode=Use Dark Mode
 
+#Error Handler
+errorText=Request Failed
+
 # Login Page
 login.title=Login
 login.username=Username
